--- a/snippets/scripts.liquid
+++ b/snippets/scripts.liquid
@@ -232,6 +232,7 @@
     import { RecentlyViewed } from '@theme/recently-viewed-products';
     RecentlyViewed.addProduct('{{ product.id }}');
   </script>
+  <script src="{{ 'product-page-premium.js' | asset_url }}" defer></script>
 {% endif %}
 
 {% if settings.transition_to_main_product %}
